--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@skeletonlabs/skeleton": "2.11.0",
     "@skeletonlabs/tw-plugin": "0.4.1",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^5.7.2",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.10",
@@ -43,6 +44,7 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.13",
     "@mdi/js": "^7.4.47",
+    "bcryptjs": "^3.0.2",
     "docx": "^9.2.0",
     "google-auth-library": "^9.15.1",
     "openai": "^4.85.1"
