--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@mdi/js": "^7.4.47",
     "bcryptjs": "^3.0.2",
     "docx": "^9.2.0",
+    "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
     "openai": "^4.85.1"
   }
